--- a/style.css
+++ b/style.css
@@ -31,10 +31,27 @@
 
 .main-content{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     padding-top: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .main-content h1{
     color: blueviolet;
+    margin-bottom: 2.5rem;
+}
+
+.profile-pic{
+    width: 500px;
+    border-radius: 50%;
+    border: 3px solid blueviolet;
+}
+
+.my-description{
+    margin-top: 1.5rem;
+    color: blueviolet;
+    font-size: 1.3rem;
+    font-weight: 10%;
 }
