--- a/style.css
+++ b/style.css
@@ -29,29 +29,63 @@
   font-size: 1.5em;
 }
 
-.main-content{
-    display: flex;
-    justify-content: space-between;
-    padding-top: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.main-content {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.main-content h1{
-    color: blueviolet;
-    margin-bottom: 2.5rem;
+.main-content h1 {
+  color: blueviolet;
+  margin-bottom: 2.5rem;
 }
 
-.profile-pic{
-    width: 300px;
-    border-radius: 50%;
-    border: 3px solid blueviolet;
+.profile-pic {
+  width: 300px;
+  border-radius: 50%;
+  border: 3px solid blueviolet;
 }
 
-.my-description{
-    margin-top: 1.5rem;
-    color: blueviolet;
-    font-size: 1.3rem;
-    font-weight: 10%;
+.short-intro {
+  margin-top: 1.5rem;
+  color: blueviolet;
+  font-size: 1.3rem;
+  font-weight: 10%;
+}
+
+.long-intro {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.intro-item {
+  color: white;
+  padding: 1.5rem;
+  width: 60%;
+  background-color: blueviolet;
+  margin-bottom: 1rem;
+  border-radius: 10px;
+}
+
+.intro-item-1 {
+  align-self: center;
+}
+.intro-item-2 {
+  align-self: flex-start;
+}
+
+.intro-item-3 {
+  align-self: flex-end;
+}
+
+footer {
+  margin-top: 1.5rem;
+  text-align: center;
+  color: blueviolet;
 }
