--- a/style.css
+++ b/style.css
@@ -114,7 +114,10 @@ body {
 .skill-list div ul{
   list-style: none;
 }
-
+.skill-list div{
+  margin-bottom: 1rem;
+  margin-right: 1.5rem;
+}
 footer {
   text-align: center;
   color: #2d3f4e;
@@ -147,6 +150,7 @@ footer {
 }
 .contacts ul li{
   list-style: none;
+  margin: 0 0.5rem;
 }
 
 .contacts ul li:hover{
@@ -154,8 +158,16 @@ footer {
   cursor: pointer;
 }
 
+.contacts ul li a{
+  text-decoration: none;
+  color: #2d3f4e;
+}
+
 @media all and (max-width: 700px) {
   .intro-text {
     padding: 0.5rem;
+  }
+  .contacts{
+    width: 53%;
   }
 }
