--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -14,7 +14,10 @@ body {
   background-color: rgb(45, 63, 78);
   position: sticky;
   top: 0;
+  /* space */
+  margin-bottom: 25px;
 }
+
 .main-nav ul {
   display: flex;
   justify-content: space-evenly;
@@ -44,6 +47,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+  /* giving breathing space: */
+  gap: 30px;
   color: #2d3f4e;
 }
 
@@ -78,27 +83,39 @@ body {
   width: 90%;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5), -2px -2px 5px rgba(0, 0, 0, 0.5),
     -2px 2px 5px rgba(0, 0, 0, 0.5), 2px -2px 5px rgba(0, 0, 0, 0.5);
+  /* setting max width so that it won't look that odd in bigger screen, who knows from what device the viewer will look */
+  max-width: 1100px;
 }
 
 .skill-section {
-  margin-top: 2rem;
+  margin-top: 6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 30px;
   justify-content: space-evenly;
   color: #2d3f4e;
 }
 
 .skill-list {
   margin-top: 1.5rem;
-  line-height: 1.5;
-  padding: 1rem;
-  width: 70%;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5), -2px -2px 5px rgba(0, 0, 0, 0.5),
-    -2px 2px 5px rgba(0, 0, 0, 0.5), 2px -2px 5px rgba(0, 0, 0, 0.5);
+  flex-direction: column;
+  text-align: center;
+  /* wrap vanda ni yesari gara */
+}
+
+@media screen and (min-width: 720px) {
+  .skill-list {
+    flex-direction: row;
+    width: 92%;
+    max-width: 1100px;
+    justify-content: space-around;
+    text-align: left;
+    padding: 1rem;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5), -2px -2px 5px rgba(0, 0, 0, 0.5),
+      -2px 2px 5px rgba(0, 0, 0, 0.5), 2px -2px 5px rgba(0, 0, 0, 0.5);
+  }
 }
 
 .skill-list div h2 {
@@ -108,20 +125,28 @@ body {
 .skill-list div ul {
   list-style: none;
 }
+
+/* halka breathing space: */
+.skill-list div ul li {
+  margin: 15px 0;
+}
+
 .skill-list div {
   margin-bottom: 1rem;
-  margin-left: 1.5rem;
 }
+
 footer {
   text-align: center;
-  color: #2d3f4e;
   margin-top: 2rem;
-  text-shadow: 2px 2px 15px;
+  font-size: small;
+  color: white;
+  padding: 6rem 0;
+  background-color: #2d3f4e;
 }
 
 .contact-section {
   color: #2d3f4e;
-  margin-top: 2rem;
+  margin-top: 6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -134,14 +159,14 @@ footer {
 .contacts {
   line-height: 1.5;
   padding: 0.5rem 1rem;
-  width: 40%;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5), -2px -2px 5px rgba(0, 0, 0, 0.5),
-    -2px 2px 5px rgba(0, 0, 0, 0.5), 2px -2px 5px rgba(0, 0, 0, 0.5);
+  margin: 2rem 0;
 }
+
 .contacts ul {
   display: flex;
   justify-content: space-evenly;
 }
+
 .contacts ul li {
   list-style: none;
   margin: 0 0.5rem;
@@ -155,12 +180,14 @@ footer {
 .contacts ul li a {
   text-decoration: none;
   color: #2d3f4e;
+  font-family: sans-serif;
 }
 
 @media all and (max-width: 700px) {
   .intro-text {
-    padding: 0.5rem;
+    padding: 30px 15px;
   }
+
   .contacts {
     width: 53%;
   }
@@ -168,8 +195,9 @@ footer {
 
 @media all and (max-width: 470px) {
   .intro-text {
-    padding: 0.5rem;
+    padding: 30px 15px;
   }
+
   .contacts {
     width: 60%;
   }
@@ -177,11 +205,13 @@ footer {
 
 @media all and (max-width: 420px) {
   .intro-text {
-    padding: 0.5rem;
+    padding: 25px 12px;
   }
+
   .contacts {
     width: 80%;
   }
+
   .main-nav ul {
     justify-content: space-between;
   }
@@ -189,12 +219,18 @@ footer {
 
 @media all and (max-width: 320px) {
   .intro-text {
-    padding: 0.5rem;
+    padding: 20px 10px;
   }
+
   .contacts {
     width: 80%;
   }
+
   .contacts ul {
     flex-wrap: wrap;
   }
+}
+
+.skill-list h2 {
+  font-weight: 600;
 }
